...
              _buildOption(
                  "Camera", ImageSource.camera, brown, const Key('Camera')),
              const SizedBox(height: 8),
              _buildOption(
                  "Gallery", ImageSource.gallery, brown, const Key('Gallery')),
              const SizedBox(height: 8),
              _buildOption('App Asset', null, brown, const Key('AppAsset')),
              const SizedBox(
                height: 8,
              ),
              _buildOption("Cancel", null, red, const Key('Cancel')),
            ],
          ),
...
        agregarObjeto(
            context,
            'images/$randomFileName.jpg',
            _nombreArticuloController.text.trim(),
            _descripcionController.text,
            widget.categoria,
            "Artículo agregado exitosamente",
            "No se pudo agregar el artículo");

        // Close the progress dialog
        Navigator.of(context).pop();
      });

      // Close the progress dialog if an error occurs
    } catch (e) {
      showSnackbar(context, "Error al subir la imagen", red);

      Navigator.of(context).pop();
    }
  }

  void agregar() async {
...
                ),
                const SizedBox(
                  height: 25,
                ),
                Center(
                  child: GestureDetector(
                    key: const Key('Image'),
                    onTap: _pickImage,
                    child: Column(
                      children: [
                        if (_selectedImage != null)
                          Image.file(
                            File(_selectedImage!.path),
...
                      borderRadius: BorderRadius.circular(12),
                    ),
                    child: Padding(
                      padding: const EdgeInsets.only(left: 20),
                      child: Center(
                        child: TextField(
                          key: const Key('nombreArticulo'),
                          maxLength: 20,
                          controller: _nombreArticuloController,
                          decoration: const InputDecoration(
                            border: InputBorder.none,
                            hintText: 'Nombre',
                            hintStyle: TextStyle(
...
                      borderRadius: BorderRadius.circular(12),
                    ),
                    child: Padding(
                      padding: const EdgeInsets.only(left: 20),
                      child: Center(
                        child: TextField(
                          key: const Key('Descripcion'),
                          maxLength: 300,
                          controller: _descripcionController,
                          maxLines: null,
                          keyboardType: TextInputType.multiline,
                          decoration: const InputDecoration(
                            border: InputBorder.none,
...
                  height: (screenHeight / 33),
                ),
                Center(
                  child: SizedBox(
                    width: screenWidth - 200,
                    child: ElevatedButton(
                      key: const Key('Guardar'),
                      style: const ButtonStyle(
                          backgroundColor: WidgetStatePropertyAll(Colors.blue)),
                      onPressed: agregar,
                      child: const Text('Guardar'),
                    ),
                  ),
...
