...
    for (final objectDoc in objectsQuerySnapshot.docs) {
      final category = categoryDoc['Name'];
      final objectName = objectDoc['Name'];

      if (category == description) {
        showSnackbar(context,
            "Descripción no puede ser igual al nombre de la categoría", red);
        return;
      }
      if (objectName == description) {
        showSnackbar(context,
            "Descripción no puede ser igual al nombre del artículo", red);
        return;
      }

      await objectDoc.reference.update({'Description': description});

      showSnackbar(context, "Se han guardado los cambios", green);
      return;
    }
  }
}

// Método encargado de eliminar la descripción de un artículo y dejar vacío el campo de descripción
...
  agregarObjetoLogic(
      context, url, name, descripcion, categoria, mensajeExito, mensajeError);
}

bool validarNombre(BuildContext context, String name) {
  if (name.trim().isEmpty) {
    showSnackbar(context, "El nombre del artículo no puede ir vacío", red);
    return false;
  }
  return true;
}

bool validarDescripcionDos(
    BuildContext context, String descripcion, String name, String categoria) {
  final containsLetter = RegExp(r'[a-zA-Z]').hasMatch(descripcion);
  if (descripcion.isNotEmpty && descripcion.length < 10) {
    showSnackbar(
        context, "La descripción debe contener al menos 10 caracteres", red);
    return false;
  }

  if (descripcion.length > 300) {
    showSnackbar(
        context, "La descripción no puede exceder los 300 caracteres", red);
...
  return true;
}

bool validarDescripcionUna(
    BuildContext context, String descripcion, String name, String categoria) {
  if (name == categoria) {
    showSnackbar(context, "No puede llevar el nombre de la categoría", red);
    return false;
  }
  if (descripcion == name) {
    showSnackbar(
        context, "Descripción no puede ser igual al nombre del artículo", red);
    return false;
...
